--- a/ReportErrorParser/ReportErrorParser.csproj
+++ b/ReportErrorParser/ReportErrorParser.csproj
@@ -68,6 +68,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
